# cognara

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
app/: main.py
app/agents/: crag_agent.py  crag_runner.py
app/api/v1/: ask.py
app/core/: config.py  logging.py
app/models/: schemas.py
app/retrieval/: embedder.py  graph_store.py  hybrid_search.py  keyword_search.py  reranker.py  vector_store.py
app/services/: ask_service.py  faithfulness.py  generation.py  learning_modes.py  quiz_interview.py
data/catalog/: document_catalog_template.csv  document_catalog_v1.csv  schema.md
docs/adr/: 0001-focused-subset-vs-full-corpus.md  0002-gcp-from-start.md  0003-vector-store-pgvector-cloudsql.md  0004-langchain-adk-not-langgraph.md  0005-layer2-retrieval-bm25-vertex-rerank.md  0006-layer3-crag-adk-agent.md  0007-layer4-evidence-sufficiency-gate.md  0008-layer5-learning-modes.md  0009-layer5-stateful-modes.md  0010-layer6-graphrag-neo4j.md  0011-crag-migration-adk-to-agno.md  0012-conversation-memory-design.md
docs/architecture/: phase0-architecture.md
docs/guides/: README.md
evals/datasets/: golden_set_plan.md
ingestion/chunking/: chunker.py
ingestion/parsers/: pdf_parser.py
ingestion/pipelines/: build_concept_graph.py  init_db.py  run_ingestion.py
scripts/: check_graph_progress.py  extract_toc.py  extract_toc_top.py  verify_pages.py
tests/integration/: test_ask_service.py  test_crag_agent.py  test_embedder.py  test_faithfulness.py  test_generation.py  test_graph_store.py  test_hybrid_search.py  test_init_db.py  test_keyword_search.py  test_learning_modes.py  test_quiz_interview.py  test_reranker.py  test_vector_store.py
tests/unit/: test_chunker.py  test_pdf_parser.py  test_schemas.py
