[project]
name = "cognara-learn"
version = "0.1.0"
description = "Evidence-verified AI learning and interview-preparation copilot"
requires-python = ">=3.12"

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",

    # Data validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",

    # PDF parsing
    "pymupdf>=1.24.0",

    # Vector store: Cloud SQL Postgres + pgvector (see ADR 0003)
    "pgvector>=0.3.0",                    # Python bindings + SQLAlchemy types
    "psycopg[binary]>=3.1.0",             # Postgres driver
    "sqlalchemy>=2.0.0",                  # query building + connection pooling
    "cloud-sql-python-connector[pg8000]>=1.9.0",  # secure Cloud SQL connections (prod)

    # Ingestion + retrieval components (see ADR 0004)
    # NOTE: as of langchain 1.x, TextSplitter/BaseLoader helpers are split
    # across independently-versioned packages, not bundled into one. All
    # were needed — confirmed by actually trying the imports.
    "langchain>=0.3.0",                   # top-level package
    "langchain-core>=0.3.0",              # Document, BaseLoader, VectorStore base abstractions
    "langchain-text-splitters>=0.3.0",    # TextSplitter and concrete splitters (separate package!)

    # Embeddings + generation clients (Vertex AI backend, via Google's
    # consolidated SDK — see Module 4 build notes):
    #   - langchain-google-genai's GoogleGenerativeAIEmbeddings replaces
    #     the now-deprecated VertexAIEmbeddings; same Vertex AI backend
    #     via project= + vertexai=True, no reported downside for embeddings.
    #   - langchain-google-vertexai's ChatVertexAI is KEPT (not migrated to
    #     ChatGoogleGenerativeAI yet) — teams report 50-90% latency
    #     increases after that specific migration (REST vs gRPC under the
    #     hood, as of this writing). Revisit when Module 6 (generation)
    #     is built, once that regression is resolved upstream or measured
    #     as acceptable for our own latency budget.
    "langchain-google-genai>=4.0.0",      # GoogleGenerativeAIEmbeddings (Vertex AI backend)
    "langchain-google-vertexai>=2.0.0",   # ChatVertexAI — kept deliberately, see note above
    "langchain-postgres>=0.0.12",         # kept only for its Embeddings/VectorStore base re-exports;
                                           # NOT used for its PGVector class — see app/retrieval/vector_store.py

    # Layer 2 — Advanced Retrieval (see ADR 0005)
    "rank-bm25>=0.2.2",                   # real BM25Okapi keyword search, in-memory index
    "langchain-google-community[vertexaisearch]>=2.0.0",  # VertexAIRank reranker (Discovery Engine Ranking API)

    # Layer 3 — CRAG orchestration (see ADR 0004: ADK for orchestration,
    # LangChain for components). Confirmed real package + current stable
    # interface (Agent, tools=[...], output_schema) against the official
    # google/adk-python repo, latest release v1.33.0, before installing —
    # ADK 2.0 shipped real breaking changes to the agent/event/session
    # API, so version awareness matters here more than for most deps.
    "google-adk>=1.30.0",

    # Layer 6 — GraphRAG (see ADR 0010). Neo4j AuraDB Free — a deliberate
    # break from every earlier "reuse the existing Postgres" decision
    # (ADR 0003, ADR 0005), chosen specifically to demonstrate real
    # graph-database/Cypher experience rather than modeling relationships
    # as plain SQL tables. AuraDB Free tier is genuinely free (no credit
    # card), up to 200k nodes / 400k relationships — far beyond what a
    # ~388-chunk corpus's concept graph will ever need.
    "neo4j>=5.24.0",

    # GCP — all used from day one
    "google-cloud-aiplatform>=1.55.0",   # Vertex AI: Gemini + embeddings + Ranking API (Layer 2 rerank)
    "google-cloud-storage>=2.16.0",       # raw PDFs + processed chunk JSONL
    "google-cloud-bigquery>=3.21.0",      # eval logs + query logs
    "google-cloud-logging>=3.10.0",       # structured app logs

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "tenacity>=8.3.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "ingestion"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
