[project]
name = "cognara-learn"
version = "0.1.0"
description = "Evidence-verified AI learning and interview-preparation copilot"
requires-python = ">=3.12"

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",

    # Data validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",

    # PDF parsing
    "pymupdf>=1.24.0",

    # Vector store: Cloud SQL Postgres + pgvector (see ADR 0003)
    "pgvector>=0.3.0",                    # Python bindings + SQLAlchemy types
    "psycopg[binary]>=3.1.0",             # Postgres driver
    "sqlalchemy>=2.0.0",                  # query building + connection pooling
    "cloud-sql-python-connector[pg8000]>=1.9.0",  # secure Cloud SQL connections (prod)

    # Ingestion + retrieval components (see ADR 0004 — SUPERSEDED by ADR 0011
    # for the agent/orchestration layer; LangChain remains here for now,
    # pending the retrieval-layer phase of the Agno migration).
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-google-genai>=4.0.0",
    "langchain-google-vertexai>=2.0.0",
    "langchain-postgres>=0.0.12",

    # Layer 2 — Advanced Retrieval (see ADR 0005)
    "rank-bm25>=0.2.2",
    "langchain-google-community[vertexaisearch]>=2.0.0",

    # Layer 3 — CRAG orchestration (see ADR 0011: Agno, replacing ADK — see
    # ADR 0004/0006 SUPERSEDED). Confirmed real, current API — Agent,
    # tools=[...], output_schema, RunOutput.tools[].{tool_name,tool_args,result}
    # — directly against docs.agno.com (Agno Docs MCP) before writing any
    # code. Real version pin confirmed via PyPI: agno >=2.5.0 (current
    # stable line as of this migration; v2.0, Sept 2025, was a full rewrite
    # of Agent/Team/Workflow — pre-v2.0 tutorials/code do not apply).
    "agno>=2.5.0",
    "google-genai>=1.0.0",                # underlies agno.models.google.Gemini (Vertex AI backend)

    # Layer 6 — GraphRAG (see ADR 0010). Neo4j AuraDB Free — a deliberate
    # break from every earlier "reuse the existing Postgres" decision
    # (ADR 0003, ADR 0005), chosen specifically to demonstrate real
    # graph-database/Cypher experience rather than modeling relationships
    # as plain SQL tables. AuraDB Free tier is genuinely free (no credit
    # card), up to 200k nodes / 400k relationships — far beyond what a
    # ~388-chunk corpus's concept graph will ever need.
    "neo4j>=5.24.0",

    # GCP — all used from day one
    "google-cloud-aiplatform>=1.55.0",   # Vertex AI: Gemini + embeddings + Ranking API (Layer 2 rerank)
    "google-cloud-storage>=2.16.0",       # raw PDFs + processed chunk JSONL
    "google-cloud-bigquery>=3.21.0",      # eval logs + query logs
    "google-cloud-logging>=3.10.0",       # structured app logs

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "tenacity>=8.3.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "ingestion"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
